fixed alignment

--- a/src/components/Services/style.css
+++ b/src/components/Services/style.css
@@ -82,5 +82,6 @@ align-items: center;
 }
 
 .money{
+  margin-bottom: 0 !important;
   text-wrap: nowrap;
 }
